--- a/Admin/Estilo/index.css
+++ b/Admin/Estilo/index.css
@@ -3,13 +3,17 @@
 }
 
 #photo1 {
-    height: 480px;
+    height: 650px;
 }
 
 #photo2 {
-     height: 480px;
+     height: 650px;
 }
 
 #photo3 {
-    height: 480px;
+    height: 650px;
+}
+
+#kitfe {
+    height: 615px;
 }
